# praktosi

games_project_Lebedeva/: main.py  pyproject.toml
games_project_Lebedeva/VD_games/: cli.py
games_project_Lebedeva/VD_games/games/: calc.py  prime.py  progression.py
games_project_Lebedeva/VD_games/scripts/: VD_even.py  VD_games.py  VD_main.py
